@@ -5,7 +5,7 @@ from typing import Any, Optional
 
 from astroid import nodes
 
-from pylint.interfaces import Confidence
+from pylint.interfaces import UNDEFINED, Confidence
 from pylint.testutils.global_test_linter import linter
 from pylint.testutils.output_line import MessageTest
 from pylint.utils import LinterStats
@@ -37,10 +37,21 @@ class UnittestLinter:
         end_lineno: Optional[int] = None,
         end_col_offset: Optional[int] = None,
     ) -> None:
-        # Do not test col_offset for now since changing Message breaks everything
+        """Add a MessageTest to the _messages attribute of the linter class."""
+        # If confidence is None we set it to UNDEFINED as well in PyLinter
+        if confidence is None:
+            confidence = UNDEFINED
+        # pylint: disable=fixme
+        # TODO: Test col_offset
+        # pylint: disable=fixme
+        # TODO: Initialize col_offset on every node (can be None) -> astroid
+        # if col_offset is None and hasattr(node, "col_offset"):
+        #     col_offset = node.col_offset
         # pylint: disable=fixme
         # TODO: Test end_lineno and end_col_offset :)
-        self._messages.append(MessageTest(msg_id, line, node, args, confidence))
+        self._messages.append(
+            MessageTest(msg_id, line, node, args, confidence, col_offset)
+        )
 
     @staticmethod
     def is_message_enabled(*unused_args, **unused_kwargs):
